# kgeography

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  Changelog  Makefile.am  README  TODO  snapcraft.yaml
data/: CMakeLists.txt  Makefile.am  TODO  afghanistan.kgm  africa.kgm  albania_districts.kgm  albania_prefectures.kgm  algeria.kgm  andhrapradesh.kgm  andorra.kgm  angola_provinces.kgm  argentina.kgm  armenia.kgm  arunachalpradesh.kgm  asia.kgm  assam.kgm  australia.kgm  austria.kgm  azerbaijan.kgm  bangladesh.kgm  belarus.kgm  belgium.kgm  belize.kgm  bhutan.kgm  bihar.kgm  bolivia.kgm  bosnia-herzegovina.kgm  botswana.kgm  brazil.kgm  bulgaria.kgm  burkina_provinces.kgm  burkina_regions.kgm  burma.kgm  cameroon_departments.kgm  cameroon_provinces.kgm  canada.kgm  caribbean.kgm  catalonia_comarques.kgm  chhattisgarh.kgm  chile.kgm  (+118 more)
data/flags/: CMakeLists.txt  Makefile.am  README
data/flags/australia/: CMakeLists.txt
data/flags/belarus/: CMakeLists.txt
data/flags/belgium/: CMakeLists.txt
data/flags/brazil/: CMakeLists.txt
data/flags/canada/: CMakeLists.txt
data/flags/colombia/: CMakeLists.txt
data/flags/estonia/: CMakeLists.txt
data/flags/france/: CMakeLists.txt
data/flags/germany/: CMakeLists.txt
data/flags/ghana/: CMakeLists.txt
data/flags/ireland/: CMakeLists.txt
data/flags/italy/: CMakeLists.txt  Makefile.am
data/flags/japan/: CMakeLists.txt
data/flags/norway/: CMakeLists.txt  README
data/flags/peru/: CMakeLists.txt
data/flags/portugal/: CMakeLists.txt
data/flags/russia/: CMakeLists.txt
data/flags/slovakia/: CMakeLists.txt
data/flags/spain/: CMakeLists.txt
data/flags/svg/: README  albania.svgz  algeria.svgz  andorra.svgz  angola.svgz  antigua.svgz  argentina.svgz  austria.svgz  bahamas.svgz  barbados.svgz  belarus.svgz  belgium.svgz  belize.svgz  benin.svgz  bolivia.svgz  bosnia_herzegovina.svgz  botswana.svgz  brazil.svgz  bulgaria.svgz  burkina.svgz  burundi.svgz  cameroon.svgz  canada.svgz  central_african_republic.svgz  chad.svgz  chile.svgz  colombia.svgz  congo_brazzaville.svgz  congo_kinshasa.svgz  costa_rica.svgz  cote_divoire.svgz  croatia.svgz  cuba_3x2.svgz  cyprus_4x3.svgz  czech.svgz  denmark.svgz  djibouti.svgz  dominica.svgz  dominicanrepublic.svgz  ecuador.svgz  (+121 more)
data/flags/ukraine/: CMakeLists.txt  Makefile.am
data/flags/usa/: CMakeLists.txt
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  Makefile.am  crsc-app-kgeography.svgz  oxsc-apps-kgeography.svgz
po/ar/: kgeography.po
po/ast/: kgeography.po
po/az/: kgeography.po
po/be/: kgeography.po
po/bg/: kgeography.po
po/br/: kgeography.po
po/bs/: kgeography.po
po/ca/: kgeography.po
po/ca/docs/kgeography/: index.docbook
po/ca@valencia/: kgeography.po
po/cs/: kgeography.po
po/cy/: kgeography.po
po/da/: kgeography.po
po/de/: kgeography.po
po/de/docs/kgeography/: index.docbook
po/el/: kgeography.po
po/en_GB/: kgeography.po
po/eo/: kgeography.po
po/es/: kgeography.po
po/es/docs/kgeography/: index.docbook
po/et/: kgeography.po
po/et/docs/kgeography/: index.docbook
po/eu/: kgeography.po
po/fa/: kgeography.po
po/fi/: kgeography.po
po/fi/scripts/kgeography/: kgeography.js  kgeography.pmap
po/fr/: kgeography.po
po/fr/docs/kgeography/: index.docbook
po/fr/scripts/kgeography/: kgeography.js
po/ga/: kgeography.po
po/gl/: kgeography.po
po/gu/: kgeography.po
po/he/: kgeography.po
po/hi/: kgeography.po
po/hne/: kgeography.po
po/hr/: kgeography.po
po/hu/: kgeography.po
po/ia/: kgeography.po
po/is/: kgeography.po
po/it/: kgeography.po
po/it/docs/kgeography/: index.docbook
po/ja/: kgeography.po
po/ja/scripts/kgeography/: kgeography.js
po/ka/: kgeography.po
po/kk/: kgeography.po
po/km/: kgeography.po
po/ko/: kgeography.po
po/lo/: kgeography.po
po/lt/: kgeography.po
po/lv/: kgeography.po
po/mai/: kgeography.po
po/mk/: kgeography.po
po/ml/: kgeography.po
po/ml/scripts/kgeography/: kgeography.js
po/mr/: kgeography.po
po/ms/: kgeography.po
po/nb/: kgeography.po
po/nds/: kgeography.po
po/ne/: kgeography.po
po/nl/: kgeography.po
po/nl/docs/kgeography/: index.docbook
po/nn/: kgeography.po
po/oc/: kgeography.po
po/pa/: kgeography.po
po/pl/: kgeography.po
po/pl/scripts/kgeography/: general.pmap  kgeography.js
po/pt/: kgeography.po
po/pt/docs/kgeography/: index.docbook
po/pt_BR/: kgeography.po
po/pt_BR/docs/kgeography/: index.docbook
po/ro/: kgeography.po
po/ru/: kgeography.po
po/ru/docs/kgeography/: index.docbook
po/sa/: kgeography.po
po/se/: kgeography.po
po/si/: kgeography.po
po/sk/: kgeography.po
po/sl/: kgeography.po
po/sl/docs/kgeography/: index.docbook
po/sq/: kgeography.po
po/sv/: kgeography.po
po/sv/docs/kgeography/: index.docbook
po/ta/: kgeography.po
po/tg/: kgeography.po
po/th/: kgeography.po
po/tr/: kgeography.po
po/ug/: kgeography.po
po/uk/: kgeography.po
po/uk/docs/kgeography/: index.docbook
po/uk/scripts/kgeography/: general.pmap  kgeography.js
po/zh_CN/: kgeography.po
po/zh_TW/: kgeography.po
src/: CMakeLists.txt  KGeographyOptions.ui  Makefile.am  Messages.sh  answer.cpp  answer.h  answersdialog.cpp  answersdialog.h  askwidget.cpp  askwidget.h  boxasker.cpp  boxasker.h  capitaldivisionasker.cpp  capitaldivisionasker.h  division.cpp  division.h  divisioncapitalasker.cpp  divisioncapitalasker.h  divisionflagasker.cpp  divisionflagasker.h  flagdivisionasker.cpp  flagdivisionasker.h  infowidget.cpp  infowidget.h  integerinputdialog.cpp  integerinputdialog.h  kgeography.cpp  kgeography.desktop  kgeography.h  kgeography.kcfg  kgeography.qrc  kgeography.rc  kgeographyoptions.ui  kgeographyui.rc  main.cpp  map.cpp  map.h  mapasker.cpp  mapasker.h  mapchooser.cpp  (+19 more)
tools/: colorchecker.py  gen_map.pl
