
add_subdirectory(flags)

########### install files ###############

install(FILES
   africa.png
   europe.png
   france.png
   germany.png
   ncamerica.png
   southamerica.png
   spain.png
   usa.png
   africa.kgm
   europe.kgm
   france.kgm
   germany.kgm
   ncamerica.kgm
   southamerica.kgm
   spain.kgm
   usa.kgm
   italy.png
   italy.kgm
   poland.kgm
   poland.png
   austria.kgm
   austria.png
   norway.kgm
   norway.png
   china.png
   china.kgm
   brazil.png
   brazil.kgm
   italyprovince.kgm
   italyprovince.png
   asia.png
   asia.kgm
   world.png
   world.kgm
   canada.png
   canada.kgm
   netherlands.png
   netherlands.kgm
   hungary.kgm
   hungary.png
   hungary_regions.kgm
   hungary_regions.png
   belgium.kgm
   belgium.png
   southkorea.kgm
   southkorea.png
   colombia.kgm
   colombia.png
   ukraine.kgm
   ukraine.png
   peru.kgm
   peru.png
   australia.kgm
   australia.png
   estonia.kgm
   estonia.png
   belarus.kgm
   belarus.png
   slovakia.kgm
   slovakia.png
   czech.kgm
   czech.png
   iceland_regions.kgm
   iceland_regions.png
   costa_rica.kgm
   costa_rica.png
   belize.kgm
   belize.png
   cuba.kgm
   cuba.png
   dominican_republic.kgm
   dominican_republic.png
   ecuador.kgm
   ecuador.png
   el_salvador.kgm
   el_salvador.png
   guatemala.kgm
   guatemala.png
   guyana.kgm
   guyana.png
   haiti.kgm
   haiti.png
   honduras.kgm
   honduras.png
   japan.kgm
   japan.png
   sweden.kgm
   sweden.png
   jamaica.kgm
   jamaica.png
   nicaragua.kgm
   nicaragua.png
   panama.kgm
   panama.png
   suriname.kgm
   suriname.png
   venezuela.kgm
   venezuela.png
   argentina.kgm
   argentina.png
   bolivia.kgm
   bolivia.png
   chile.kgm
   chile.png
   greece.kgm
   greece.png
   paraguay.kgm
   paraguay.png
   uruguay.kgm
   uruguay.png
   iran.kgm
   iran.png
   latvia.kgm
   latvia.png
   zimbabwe.kgm
   zimbabwe.png
   puertorico.kgm
   puertorico.png
   spain_provinces.kgm
   spain_provinces.png
   afghanistan.kgm
   afghanistan.png
   albania_districts.kgm
   albania_districts.png
   albania_prefectures.kgm
   albania_prefectures.png
   andorra.kgm
   andorra.png
   armenia.kgm
   armenia.png
	DESTINATION ${DATA_INSTALL_DIR}/kgeography/)

