
add_subdirectory(flags)

########### install files ###############

install(FILES
   africa.png
   europe.png
   france.png
   germany.png
   ncamerica.png
   southamerica.png
   spain.png
   usa.png
   africa.kgm
   europe.kgm
   france.kgm
   germany.kgm
   ncamerica.kgm
   southamerica.kgm
   spain.kgm
   usa.kgm
   italy.png
   italy.kgm
   poland.kgm
   poland.png
   austria.kgm
   austria.png
   norway.kgm
   norway.png
   china.png
   china.kgm
   brazil.png
   brazil.kgm
   italyprovince.kgm
   italyprovince.png
   asia.png
   asia.kgm
   world.png
   world.kgm
   canada.png
   canada.kgm
   netherlands.png
   netherlands.kgm
   hungary.kgm
   hungary.png
   hungary_regions.kgm
   hungary_regions.png
   belgium.kgm
   belgium.png
   southkorea.kgm
   southkorea.png
   colombia.kgm
   colombia.png
   ukraine.kgm
   ukraine.png
   peru.kgm
   peru.png
   australia.kgm
   australia.png
   estonia.kgm
   estonia.png
   belarus.kgm
   belarus.png
   slovakia.kgm
   slovakia.png
   czech.kgm
   czech.png
   iceland_regions.kgm
   iceland_regions.png
   costa_rica.kgm
   costa_rica.png
   belize.kgm
   belize.png
   cuba.kgm
   cuba.png
   dominican_republic.kgm
   dominican_republic.png
   ecuador.kgm
   ecuador.png
   el_salvador.kgm
   el_salvador.png
   guatemala.kgm
   guatemala.png
   guyana.kgm
   guyana.png
   haiti.kgm
   haiti.png
   honduras.kgm
   honduras.png
   japan.kgm
   japan.png
   sweden.kgm
   sweden.png
   jamaica.kgm
   jamaica.png
   nicaragua.kgm
   nicaragua.png
   panama.kgm
   panama.png
   suriname.kgm
   suriname.png
   venezuela.kgm
   venezuela.png
   argentina.kgm
   argentina.png
   bolivia.kgm
   bolivia.png
   chile.kgm
   chile.png
   greece.kgm
   greece.png
   paraguay.kgm
   paraguay.png
   uruguay.kgm
   uruguay.png
   iran.kgm
   iran.png
   latvia.kgm
   latvia.png
   zimbabwe.kgm
   zimbabwe.png
   puertorico.kgm
   puertorico.png
   spain_provinces.kgm
   spain_provinces.png
   afghanistan.kgm
   afghanistan.png
   albania_districts.kgm
   albania_districts.png
   albania_prefectures.kgm
   albania_prefectures.png
   andorra.kgm
   andorra.png
   armenia.kgm
   armenia.png
   westbengal.kgm
   westbengal.png
   caribbean.kgm
   caribbean.png
   denmark_counties.kgm
   denmark_counties.png
   egypt.kgm
   egypt.png
   finland_regions.kgm
   finland_regions.png
   france_regions.kgm
   france_regions.png
   great-britain_counties.kgm
   great-britain_counties.png
   india.kgm
   india.png
   indonesia.kgm
   indonesia.png
   iraq.kgm
   iraq.png
   israel.kgm
   israel.png
   kazakhstan.kgm
   kazakhstan.png
   lithuania_municipalities.kgm
   lithuania_municipalities.png
   luxembourg_cantons.kgm
   luxembourg_cantons.png
   malaysia.kgm
   malaysia.png
   mexico_states.kgm
   mexico_states.png
   mongolia.kgm
   mongolia.png
   new-zealand.kgm
   new-zealand.png
   north_korea.kgm
   north_korea.png
   oceania.kgm
   oceania.png
   pakistan.kgm
   pakistan.png
   philippines.kgm
   philippines.png
   portugal_regions.kgm
   portugal_regions.png
   republic_of_ireland.kgm
   republic_of_ireland.png
   romania.kgm
   romania.png
   russia_districts.kgm
   russia_districts.png
   russia_subjects.kgm
   russia_subjects.png
   saudi_arabia.kgm
   saudi_arabia.png
   slovenia_traditional.kgm
   slovenia_traditional.png
   south_africa.kgm
   south_africa.png
   sudan.kgm
   sudan.png
   switzerland.kgm
   switzerland.png
   thailand.kgm
   thailand.png
   turkey.kgm
   turkey.png
   vietnam.kgm
   vietnam.png
   zaire2006.kgm
   zaire2006.png
   waters_world-class.kgm
   waters_world-class.png
   angola_provinces.kgm
   angola_provinces.png
   bhutan.kgm
   bhutan.png
   bulgaria.kgm
   bulgaria.png
   burma.kgm
   burma.png
   botswana.kgm
   botswana.png
   bosnia-herzegovina.kgm
   bosnia-herzegovina.png
   cameroon_departments.kgm
   cameroon_departments.png
   cameroon_provinces.kgm
   cameroon_provinces.png
   cyprus.kgm
   cyprus.png
   emirates.kgm
   emirates.png
   georgia.kgm
   georgia.png
   greece_peripheries.kgm
   greece_peripheries.png
   greece_prefectures.kgm
   greece_prefectures.png
   world_continents.kgm
   world_continents.png
   ireland_provinces.kgm
   ireland_provinces.png

	DESTINATION ${DATA_INSTALL_DIR}/kgeography/)

