
add_subdirectory(brazil)
add_subdirectory(canada)
add_subdirectory(colombia)
add_subdirectory(germany)
add_subdirectory(italy)
add_subdirectory(peru)
add_subdirectory(spain)
add_subdirectory(ukraine)

########### install files ###############

install(FILES
   albania.png
   djibouti.png
   latvia.png
   algeria.png
   dominicanrepublic.png
   lebanon.png
   san_marino.png
   angola.png
   dominica.png
   lesotho.png
   saudiarabia.png
   antigua.png
   egypt.png
   liberia.png
   austria.png
   el_salvador.png
   libya.png
   equatorial_guinea.png
   lithuania.png
   bahamas.png
   eritrea.png
   senegal.png
   barbados.png
   estonia.png
   luxembourg.png
   serbiamontenegro_3x2.png
   ethiopia.png
   macedonia.png
   sierra_leone.png
   belarus.png
   finland.png
   madagascar.png
   slovakia.png
   belgium.png
   france.png
   liechtenstein.png
   malawi.png
   slovenia.png
   belize.png
   gabon.png
   mali.png
   somalia.png
   benin.png
   gambia.png
   mauritania.png
   southafrica.png
   germany.png
   spain.png
   bosnia_herzegovina.png
   ghana.png
   mexico.png
   sudan.png
   botswana.png
   greece.png
   moldova.png
   swaziland.png
   guatemala.png
   morocco.png
   sweden.png
   guineabissau.png
   mozambique.png
   switzerland.png
   bulgaria.png
   guinea.png
   namibia.png
   syria.png
   burkina.png
   haiti.png
   netherlands.png
   tanzania.png
   burundi.png
   nicaragua.png
   cameroon.png
   nigeria.png
   togo.png
   canada.png
   honduras.png
   niger.png
   trinidad_tobago.png
   central_african_republic.png
   hungary.png
   tunisia.png
   chad.png
   iceland.png
   norway.png
   turkey.png
   congo_brazzaville.png
   iran.png
   oman.png
   turkmenistan.png
   congo_kinshasa.png
   iraq.png
   panama.png
   uganda.png
   costa_rica.png
   ireland.png
   poland.png
   uk.png
   cote_divoire.png
   israel.png
   portugal.png
   ukraine.png
   croatia.png
   italy.png
   qatar.png
   usa.png
   cuba_3x2.png
   jamaica.png
   western_sahara.png
   cyprus_4x3.png
   jordan.png
   romania.png
   yemen.png
   czech.png
   kenya.png
   russia.png
   zambia.png
   denmark.png
   kuwait.png
   rwanda.png
   zimbabwe.png
   colombia.png
   venezuela.png
   guyana.png
   suriname.png
   ecuador.png
   peru.png
   brazil.png
   bolivia.png
   chile.png
   paraguay.png
   argentina.png
   uruguay.png
   uae.png
   china.png
   india.png
   SriLanka.png
   mongolia.png
   kazakhstan.png
   japan.png
   myanmar.png
   nepal.png
   bhutan.png
   indonesia.png
   malaysia.png
   bangladesh.png
   afghanistan.png
   azerbaijan.png
   armenia.png
   bahrain.png
   georgia.png
   uzbekistan.png
   kyrgyzstan.png
   tajikistan.png
   pakistan.png
   laos.png
   cambodia.png
   easttimor.png
   brunei.png
   philippines.png
   thailand.png
   vietnam.png
   taiwan.png
   singapore.png
   nkorea.png
   skorea.png
   fiji.png
   tonga.png
   australia.png
   NewZealand.png
   Vatican.png
   andorra.png
   Monaco.png
   papua_new_guinea.png
   greenland.png
   usa_alabama.png
   usa_alaska.png
   usa_arizona.png
   usa_arkansas.png
   usa_california.png
   usa_colorado.png
   usa_connecticut.png
   usa_delaware.png
   usa_district_of_columbia.png
   usa_florida.png
   usa_georgia.png
   usa_hawaii.png
   usa_idaho.png
   usa_illinois.png
   usa_indiana.png
   usa_iowa.png
   usa_kansas.png
   usa_kentucky.png
   usa_louisiana.png
   usa_maine.png
   usa_maryland.png
   usa_massachusetts.png
   usa_michigan.png
   usa_minnesota.png
   usa_mississippi.png
   usa_missouri.png
   usa_montana.png
   usa_nebraska.png
   usa_nevada.png
   usa_new_hampshire.png
   usa_new_jersey.png
   usa_new_mexico.png
   usa_new_york.png
   usa_north_carolina.png
   usa_north_dakota.png
   usa_ohio.png
   usa_oklahoma.png
   usa_oregon.png
   usa_pennsylvania.png
   usa_rhode_island.png
   usa_south_carolina.png
   usa_south_dakota.png
   usa_tennessee.png
   usa_texas.png
   usa_utah.png
   usa_vermont.png
   usa_virginia.png
   usa_washington.png
   usa_west_virginia.png
   usa_wisconsin.png
   usa_wyoming.png
	DESTINATION ${DATA_INSTALL_DIR}/kgeography/flags)


