flagsdir = $(kde_datadir)/kgeography/flags
flags_DATA = albania.png djibouti.png latvia.png saarland.png algeria.png \
             dominicanrepublic.png lebanon.png san_marino.png angola.png \
             dominica.png lesotho.png saudiarabia.png antigua.png egypt.png \
             liberia.png saxony_anhalt.png austria.png el_salvador.png \
             libya.png saxony.png baden_wurttemberg.png equatorial_guinea.png \
             lithuania.png schleswig_holstein.png bahamas.png eritrea.png \
             lower_saxony.png senegal.png barbados.png estonia.png \
             luxembourg.png serbiamontenegro_3x2.png bavaria.png ethiopia.png \
             macedonia.png sierra_leone.png belarus.png finland.png \
             madagascar.png slovakia.png belgium.png france.png malawi.png \
             slovenia.png belize.png gabon.png mali.png somalia.png benin.png \
             gambia.png mauritania.png southafrica.png berlin.png germany.png \
             mecklenburg_western_pomerania.png spain.png \
             bosnia_herzegovina.png ghana.png mexico.png sudan.png \
             botswana.png greece.png moldova.png swaziland.png \
             brandenburg.png guatemala.png morocco.png sweden.png bremen.png \
             guineabissau.png mozambique.png switzerland.png bulgaria.png \
             guinea.png namibia.png syria.png burkina.png haiti.png \
             netherlands.png tanzania.png burundi.png hamburg.png \
             nicaragua.png thuringia.png cameroon.png hesse.png nigeria.png \
             togo.png canada.png honduras.png niger.png trinidad_tobago.png \
             central_african_republic.png hungary.png \
             north_rhine_westphalia.png tunisia.png chad.png iceland.png \
             norway.png turkey.png congo_brazzaville.png iran.png oman.png \
             turkmenistan.png congo_kinshasa.png iraq.png panama.png \
             uganda.png costa_rica.png ireland.png poland.png uk.png \
             cote_divoire.png israel.png portugal.png ukraine.png croatia.png \
             italy.png qatar.png usa.png cuba_3x2.png jamaica.png \
             rhineland_palatinate.png western_sahara.png cyprus_4x3.png \
             jordan.png romania.png yemen.png czech.png kenya.png russia.png \
             zambia.png denmark.png kuwait.png rwanda.png zimbabwe.png
