SUBDIRS = italy

flagsdir = $(kde_datadir)/kgeography/flags
flags_DATA = albania.png djibouti.png latvia.png saarland.png algeria.png \
             dominicanrepublic.png lebanon.png san_marino.png angola.png \
             dominica.png lesotho.png saudiarabia.png antigua.png egypt.png \
             liberia.png saxony_anhalt.png austria.png el_salvador.png \
             libya.png saxony.png baden_wurttemberg.png equatorial_guinea.png \
             lithuania.png schleswig_holstein.png bahamas.png eritrea.png \
             lower_saxony.png senegal.png barbados.png estonia.png \
             luxembourg.png serbia.png montenegro.png bavaria.png ethiopia.png \
             macedonia.png sierra_leone.png belarus.png finland.png \
             madagascar.png slovakia.png belgium.png france.png malawi.png \
             slovenia.png belize.png gabon.png mali.png somalia.png benin.png \
             gambia.png mauritania.png southafrica.png berlin.png germany.png \
             mecklenburg_western_pomerania.png spain.png \
             bosnia_herzegovina.png ghana.png mexico.png sudan.png \
             botswana.png greece.png moldova.png swaziland.png \
             brandenburg.png guatemala.png morocco.png sweden.png bremen.png \
             guineabissau.png mozambique.png switzerland.png bulgaria.png \
             guinea.png namibia.png syria.png burkina.png haiti.png \
             netherlands.png tanzania.png burundi.png hamburg.png \
             nicaragua.png thuringia.png cameroon.png hesse.png nigeria.png \
             togo.png canada.png honduras.png niger.png trinidad_tobago.png \
             central_african_republic.png hungary.png \
             north_rhine_westphalia.png tunisia.png chad.png iceland.png \
             norway.png turkey.png congo_brazzaville.png iran.png oman.png \
             turkmenistan.png congo_kinshasa.png iraq.png panama.png \
             uganda.png costa_rica.png ireland.png poland.png uk.png \
             cote_divoire.png israel.png portugal.png ukraine.png croatia.png \
             italy.png qatar.png usa.png cuba_3x2.png jamaica.png \
             rhineland_palatinate.png western_sahara.png cyprus_4x3.png \
             jordan.png romania.png yemen.png czech.png kenya.png russia.png \
             zambia.png denmark.png kuwait.png rwanda.png zimbabwe.png \
             colombia.png venezuela.png guyana.png suriname.png ecuador.png \
             peru.png brazil.png bolivia.png chile.png paraguay.png \
             argentina.png uruguay.png br_AC.png br_AP.png br_DF.png \
             br_MA.png br_MT.png br_PI.png br_RJ.png br_RR.png br_SE.png \
             br_AL.png br_BA.png br_ES.png br_MG.png br_PA.png br_PN.png \
             br_RN.png  br_RS.png  br_SP.png br_AM.png br_CE.png br_GO.png \
             br_MS.png br_PE.png br_PR.png  br_RO.png  br_SC.png  br_TO.png \
             uae.png china.png india.png SriLanka.png mongolia.png kazakhstan.png \
             japan.png myanmar.png nepal.png bhutan.png indonesia.png malaysia.png \
             bangladesh.png afghanistan.png azerbaijan.png armenia.png bahrain.png \
             georgia.png uzbekistan.png kyrgyzstan.png tajikistan.png pakistan.png \
             laos.png cambodia.png easttimor.png brunei.png philippines.png \
             thailand.png vietnam.png taiwan.png singapore.png nkorea.png \
             skorea.png fiji.png tonga.png australia.png NewZealand.png \
             Vatican.png andorra.png Monaco.png papua_new_guinea.png \
             greenland.png pei.png alberta.png bc.png manitoba.png \
             newbrunswick.png newfoundland.png novascotia.png \
             nunavut.png nwterritories.png ontario.png \
             quebec.png saskatchewan.png yukon.png \
             liechtenstein.png
