
########### install files ###############

install(FILES
   br_AC.png
   br_AP.png
   br_DF.png
   br_MA.png
   br_MT.png
   br_PI.png
   br_RJ.png
   br_RR.png
   br_SE.png
   br_AL.png
   br_BA.png
   br_ES.png
   br_MG.png
   br_PA.png
   br_PN.png
   br_RN.png
   br_RS.png
   br_SP.png
   br_AM.png
   br_CE.png
   br_GO.png
   br_MS.png
   br_PE.png
   br_PR.png
   br_RO.png
   br_SC.png
   br_TO.png
	DESTINATION ${DATA_INSTALL_DIR}/kgeography/flags/brazil)
